Fix: disable horizontal scroll

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,6 +5,9 @@ body {
     overflow: hidden;
     margin: 0px;
     user-select: none;
+    /*for disabling horizontal scroll*/
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 #_F {color: bisque;}
